<resources>
    <string name="app_name">MobOx</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Enter credentials to login</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="user_info_incorrect">Please enter the correct username and password</string>
    <string name="termsanduse">Hathi - Terms of Use</string>
    <string name="logout_prompt">Any unsaved data will be lost. Proceed ?</string>
    <string name="go">GO</string>
    <string name="home_prompt">Any unsaved data will be lost. Are you sure you want to go to Home screen?</string>
    <string name="cancel">Cancel</string>
    <string name="opening_pdf">Opening Translation...</string>
    <string name="pushlink_update">Update available on HealthTracker app</string>
    <string name="mngrmail">Email Id</string>
    <string name="mngrheading">Reporting Manager:</string>
    <string name="mngrcontact">Contact Number</string>
    <string name="settingsave">Do you want to save</string>
    <string name="Question_patientID">Patient ID </string>
    <string name="Question_patientName">Patient Name </string>
    <string name="firstName">First name </string>
    <string name="middleName">Middle name </string>
    <string name="lastName">Last name </string>
    <string name="GivenName">Given name </string>
    <string name="SurName">Surname </string>
    <string name="address">Address</string>
    <string name="contactNum">Contact Number</string>
    <string name="Question_Gender">Gender</string>
    <string name="Question_Gender_withacolon">Gender </string>
    <string name="Question_DOB">Date of Birth</string>
    <string name="Approxmate_Age">Approx Age</string>
    <string name="male_approx_Age">Male Approx Age</string>
    <string name="female_approx_Age">Female Approx Age</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="button_proceed">Proceed </string>
    <string name="datepick">Pick date</string>
    <string name="statement_or">OR</string>
    <string name="Question_consentform">Consent Number</string>
    <string name="DOBdate_select">Birthday</string>
    <string name="toast_fillgender">Select gender first</string>
    <string name="unsure_DOB">Check if unsure of dd/mm of birth</string>
    <string name="terms">I have verified all fields</string>
    <string name="unsure_phone_shared">The phone I am using is shared</string>
    <string name="eventpicker_heading">Event Calender</string>
    <string name="how_old">How old were you when the event took place?</string>
    <string name="how_old_title">Estimate of Age</string>
    <string-array name="List_eventPicker_Male">
        <item name="lm1">1947: India Independence day.</item>
        <item name="lm2">1948: Assasination of Mahatma Gandhi</item>
        <item name="lm3">1948: Liberation of Hyderabad from Nizam’s Rule</item>
        <item name="lm4">1950: India’s Republic day.</item>
        <item name="lm5">1956: Formation of Andhra Pradesh state</item>
        <item name="lm6">1962: India-China war.</item>
        <item name="lm7">1969: Man landed on Moon first time.</item>
        <item name="lm8">1970: War with Pakistan</item>
        <item name="lm9">1971: Jai Andhra Movement.</item>
        <item name="lm10">1975 \u002D 1976: Emergency</item>
        <item name="lm11">1977: Janatha party came into power.</item>
        <item name="lm12">1977: Big cyclone and Diviseema floods.</item>
        <item name="lm13">1979: Fall of Skylab.</item>
        <item name="lm14">1983: Formation of TDP government by N T Rama Rao.</item>
        <item name="lm15">1984: Assassination of Prime Minister Indira Gandhi.</item>
        <item name="lm16">1985: Rajiv Gandhi became Prime Minster of India.</item>
        <item name="lm17">1986: Big floods in coastal Andhra.</item>
        <item name="lm18">1988: Assassination of famous politician V V M Ranga</item>
    </string-array>
    <string-array name="List_eventPicker_Female">
        <item name="lf_opA_heading">Option A: \u002D For married women having no children</item>
        <item name="lf_opA_1">\u25AA Ask age at puberty (if unknown, record as 13 years).</item>
        <item name="lf_opA_2">\u25AA Gap between puberty and first marriage.</item>
        <item name="lf_opA_3">\u25AA Duration of the first marriage.</item>
        <item name="lf_opA_4">\u25AA To access present age, add all of the above responses.</item>
        <item name="blank">\u02F7 \u02F7 \u02F7 \u02F7 \u02F7 \u02F7\u02F7 \u02F7 \u02F7 \u02F7 \u02F7 \u02F7</item>
        <item name="lf_opB_heading">Option B: \u002D For married women having at least one child</item>
        <item name="lf_opB_1">\u25AA Ask age at puberty (if unknown, record as 13 years).</item>
        <item name="lf_opB_2">\u25AA Gap between puberty and first marriage.</item>
        <item name="lf_opB_3">\u25AA Gap between first marriage and first child.</item>
        <item name="lf_opB_4">\u25AA Ask present age of the first child.  </item>
        <item name="lf_opB_5">\u25AA To access present age, add all of the above responses.</item>
    </string-array>
    <string name="footer_btn_next">Next</string>
    <string name="footer_btn_back">Back</string>
    <string name="footer_btn_save">Save</string>
    <string name="footer_btn_edit">Edit</string>
    <string name="cvd_mainmenu_button_newpatient">New Patient</string>
    <string name="cvd_mainmenu_button_reviewpatient">Review Patient</string>
    <string name="cvd_mainmenu_button_Viewdb">View Database </string>
    <string name="cvd_mainmenu_button_help">Help</string>
    <string name="cvd_mainmenu_button_resources">Resources</string>
    <string name="cvd_mainmenu_button_settings">Settings</string>
    <string name="pneu_mainmenu_button_newmeasurement">New measurement</string>
    <string name="pneu_mainmenu_button_hospiResults">Hospital Results</string>
    <string name="pneu_mainmenu_button_prevVisits">Previous visits</string>
    <string name="pneu_mainmenu_button_followUp">Follow up</string>
    <string name="pneu_mainmenu_button_xray">X-rays</string>
    <string name="pneu_mainmenu_button_bloodtests">Blood tests</string>
    <string name="pneu_mainmenu_button_docdiag">Doctors diagnosis</string>
    <string name="pneu_newmeasurement_pulseox">Pulse Oximeter</string>
    <string name="pneu_newmeasurement_respirate">Respiration Rate</string>
    <string name="pneu_newmeasurement_temperature">Temperature</string>
    <string name="pneu_newmeasurement_digiSteth">Digital Stethoscope</string>
    <string name="cvd_mainmenu_button_manageUsers">Manage Users</string>
    <string name="cvd_mainmenu_button_Users">User Registration</string>
    <string name="role">Role</string>
    <string name="title_activity_user_registration">UserRegistrationActivity</string>
    <string name="Question_UserID">User ID </string>
    <string name="button_add_new_user">Add New User</string>
    <string name="FirstName">First name </string>
    <string name="userLoginId">User Login ID </string>
    <string name="passwords">Password</string>
    <string name="phc">PHC </string>
    <string name="pending">pending</string>
    <string-array name="role_type">
        <item>Select role</item>
        <item>asha</item>
        <item>doctor</item>
        <item>admin</item>
        <item>staffnurse</item>
    </string-array>
    <string name="fill_all_fields">Please fill all the fields.</string>
    <string name="show_password">Show Password</string>
    <string name="search_querying">Loading...</string>
    <string name="Question_Village">Village</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="pname">Name</string>
    <string name="plocality">Locality</string>
    <string name="ppriority">Status</string>
    <string name="radio_public">Public</string>
    <string name="radio_private">Private</string>
    <string name="radio_other">Others</string>
    <string name="reasons">Reasons</string>
    <string name="radio_option1">Doctor not available</string>
    <string name="radio_option2">Constraints (financial, health related reasons)</string>
    <string name="radio_option3">Lack of time</string>
    <string name="radio_option4">Others</string>
    <string name="radio_dk">Unknown</string>
    <string name="No_of_days">No of days</string>
    <string name="enable_internet_msg">Please Check Your Internet Connection.</string>
    <string name="Question_Age">Age </string>
    <string name="Years">years</string>
    <string name="auth_error"> Authentication Error</string>
    <string name="string_yes"> Yes</string>
    <string name="string_no"> No</string>
    <string name="string_ok"> Ok</string>
    <string name="canUpload_internet_msg"> Internet connection strength excellent. Can upload.</string>
    <string name="alert_incorrect_range">Entered value is invalid! Check range and values.</string>
    <string name="doctor_name">Doctor</string>
    <string name="lang">Select Your Language</string>
    <string name="radio_english">English</string>
    <string name="radio_telugu">Hindi</string>
    <string name="lang_setting">Select Your Language</string>
    <string name="Toast_fillallfields">Please fill in all fields to proceed</string>
    <string name="Toast_in_center">Thank you for the interest, unfortunately you are not eligible for the study, we will contact you if required in future.   </string>
    <string name="eula_title">License</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Decline</string>
    <string name="RP_ConsentNumber_info">Administer consent and PIS form after explaining the study and enter the consent number in the cell</string>
    <string name="RP_LastName_info">You can enter the family name (surname) in this cell</string>
    <string-array name="village_spinner">
        <item>Select your locality...</item>
        <item>Sion hospital</item>
        <item>Slum area1</item>
        <item>Slum area2</item>
        <item>Slum area3</item>

    </string-array>
    <string name="record_label">Record</string>
    <string name="record_readyToConnect">Ready to connect</string>
    <string name="record_notConnected">Not connected</string>
    <string name="record_finishedDialogTitle">Finished</string>
    <string name="record_finishedDialogMessageFormat">Recording finished at %1$s after %2$s. You can upload it now, or exit to the main menu and upload it later.</string>
    <string name="record_connectionLost">Connection lost</string>
    <string name="record_bluetoothTurnedOff">Bluetooth turned off</string>
    <string name="record_signalGood">Good quality signal</string>
    <string name="record_signalPoor">Poor quality signal</string>
    <string name="record_var1IconDescription">Var1Icon</string>
    <string name="record_var2IconDescription">Var2Icon</string>
    <string name="record_var1PlaceholderText">Var 1</string>
    <string name="record_var2PlaceholderText">Var 2</string>
    <string name="record_sqiImage">SQI image</string>
    <string name="record_start">Start</string>
    <string name="record_stop">Stop</string>
    <string name="record_restart">Restart</string>
    <string name="record_statusConnecting">Connecting...</string>
    <string name="record_statusFailedConnect">Failed to connect</string>
    <string name="record_statusConnected">Connected...</string>
    <string name="record_demoExitDialogButton">Exit demo</string>
    <string name="record_exitDialogButtonMenu">Main menu</string>
    <string name="record_exitDialogButtonUpload">Upload now</string>
    <string name="record_statusCannotConnect">Cannot connect</string>
    <string name="record_backButtonMessage">Please stop the recording first!</string>
    <string name="record_demoOptionDemoMessage">Cannot run demo while recording</string>
</resources>