<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_marginBottom="40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="7dp"
        android:text="@string/lang"
        android:textSize="@dimen/medium_font"
        android:textStyle="bold"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/aradiolang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:text="@string/radio_english"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/telugu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/radio_telugu"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold" />
    </RadioGroup>

    
</LinearLayout>