<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:focusable="true" android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <widgets.MyActionBar
        android:id="@+id/action_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:layout_marginTop="2dp"
        android:background="@color/divide_color" >
    </LinearLayout>



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:stretchColumns="3" >



                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Question_consentform"
                        android:textSize="@dimen/medium_font"
                        android:textStyle="bold" >
                    </TextView>

                    <EditText
                        android:id="@+id/EditText_consentform"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:inputType="number"
                        android:maxLength="6"
                        android:maxLines="1" >
                    </EditText>

                    <ImageView
                        android:id="@+id/infoBtn_consentNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/infobutton_mini" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Question_patientID"
                        android:textSize="@dimen/medium_font"
                        android:textStyle="bold" >
                    </TextView>

                    <EditText
                        android:id="@+id/EditText_patientID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:inputType="number"
                        android:maxLength="5"
                        android:maxLines="1"
                        android:textColor="@color/DarkViolet" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/GivenName"
                        android:textSize="@dimen/medium_font"
                        android:textStyle="bold" >
                    </TextView>

                    <EditText
                        android:id="@+id/EditText_firstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1" >
                    </EditText>
                </TableRow>
                <!-- android:inputType="textPersonName | textNoSuggestions" -->
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SurName"
                        android:textSize="@dimen/medium_font"
                        android:textStyle="bold" >
                    </TextView>

                    <EditText
                        android:id="@+id/EditText_LastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1" >
                    </EditText>
                    <!-- android:inputType="textPersonName" -->
                    <ImageView
                        android:id="@+id/infoBtn_lastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/infobutton_mini" />
                </TableRow>



                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contactNum"
                        android:textSize="@dimen/medium_font"
                        android:textStyle="bold" >
                    </TextView>

                    <EditText
                        android:id="@+id/EditText_ContactNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="10" >
                    </EditText>
                </TableRow>

                <!-- <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp" >

 -->










                <CheckBox
                    android:id="@+id/chk_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="50dp"
                    android:text="@string/unsure_phone_shared" />

                <!-- 			</TableRow> -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textSize="@dimen/medium_font"
                        android:textStyle="bold" >
                    </TextView>

                    <EditText
                        android:id="@+id/EditText_Address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:maxLines="2" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Question_Village"
                        android:textSize="@dimen/medium_font"
                        android:textStyle="bold" >
                    </TextView>

                    <Spinner
                        android:id="@+id/village_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/tableLayout11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:stretchColumns="4" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="7dp"
                        android:text="@string/Question_Gender_withacolon"
                        android:textSize="@dimen/medium_font"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radioSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/radio_male"
                            android:textSize="@dimen/medium_font"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/radio_female"
                            android:textSize="@dimen/medium_font"
                            android:textStyle="bold" />
                    </RadioGroup>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/tableLayout12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:stretchColumns="4" >
            </TableLayout>
            <!-- android:text="@string/Approxmate_Age" -->

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="7dp"
                    android:paddingTop="10dp"
                    android:text="@string/DOBdate_select"
                    android:textSize="@dimen/medium_font"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/showMyDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15dp"
                    android:paddingTop="10dp"
                    android:textSize="@dimen/medium_font"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/DOBcalendar_drawing"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/calendar_64px" />

                <TextView
                    android:id="@+id/pickApproxAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="7dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/infobutton_mini"
                    android:paddingTop="10dp"
                    android:textSize="@dimen/medium_font"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/statement_or"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/statement_or"
                    android:textSize="@dimen/medium_font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/Question_Age"
                    android:textSize="@dimen/medium_font"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/EditText_Age_fromDob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:ems="3"
                    android:maxLength="3" >
                </EditText>
            </TableRow>




            <CheckBox
                android:id="@+id/chk_ddmm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:text="@string/unsure_DOB" />

        </LinearLayout>
    </ScrollView>
    <!--   android:layout_marginLeft="130dp" -->
    <include
        android:id="@+id/footer_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        layout="@layout/footerbar" />

</LinearLayout>